buildscript {
    ext {
        springBootversion = '2.3.4.RELEASE'
        springDependencyversion = '1.0.10.RELEASE'
        springCloudVersion = 'Hoxton.SR8'
        eventuateTramVersion = '0.24.0.RELEASE'
        eventuateTramSagasVersion = "0.15.2.RELEASE"
        querydslPluginVersion = "1.0.10"
    }

    repositories {
        mavenCentral()
        maven { url "https://plugins.gradle.org/m2/" }
    }

    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootversion}"
        classpath "io.spring.gradle:dependency-management-plugin:${springDependencyversion}"
        classpath "gradle.plugin.com.ewerk.gradle.plugins:querydsl-plugin:${querydslPluginVersion}"
    }
}

allprojects {
    group = 'com.yunseong'
    version = '0.0.1-SNAPSHOT'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    sourceCompatibility = '11'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenCentral()
        maven { url 'https://jcenter.bintray.com/' } // 이게없으면 이벤츄에이트 트램이 안깔림
    }

    test {
        useJUnitPlatform()
    }
}